fix z-index header

--- a/header/style.css
+++ b/header/style.css
@@ -7,6 +7,7 @@
   top: 0;
   left: 0;
   height: 52px;
+  z-index: 9;
 }
 /*Create a fixed bar at the bottom of the page.*/
 .header.bottom {
